--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ openai==1.90.0
 packaging==25.0
 pandas==2.3.0
 pillow==11.2.1
+plotly==5.24.1
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==5.29.5
