--- a/docker.env.example
+++ b/docker.env.example
@@ -5,3 +5,4 @@
 GEMINI_API_KEY=your_gemini_api_key_here
 TG_BOT_TOKEN=your_telegram_bot_token_here
 ADMIN_ID=your_telegram_user_id_here
+GEMINI_MODEL=gemini-2.5-flash
